v18.1/modules/GC.Spread.Sheets.md
# Namespace: Sheets

[GC](GC.md).[Spread](GC.Spread.md).Sheets

## Table of contents

### Namespaces

- [AI](GC.Spread.Sheets.AI.md)
- [AutoMerge](GC.Spread.Sheets.AutoMerge.md)
- [Barcode](GC.Spread.Sheets.Barcode.md)
- [Bindings](GC.Spread.Sheets.Bindings.md)
- [CalcEngine](GC.Spread.Sheets.CalcEngine.md)
- [CellState](GC.Spread.Sheets.CellState.md)
- [CellTypes](GC.Spread.Sheets.CellTypes.md)
- [Charts](GC.Spread.Sheets.Charts.md)
- [Collaboration](GC.Spread.Sheets.Collaboration.md)
- [Commands](GC.Spread.Sheets.Commands.md)
- [Comments](GC.Spread.Sheets.Comments.md)
- [ConditionalFormatting](GC.Spread.Sheets.ConditionalFormatting.md)
- [ContextMenu](GC.Spread.Sheets.ContextMenu.md)
- [DataCharts](GC.Spread.Sheets.DataCharts.md)
- [DataRange](GC.Spread.Sheets.DataRange.md)
- [DataValidation](GC.Spread.Sheets.DataValidation.md)
- [Fill](GC.Spread.Sheets.Fill.md)
- [Filter](GC.Spread.Sheets.Filter.md)
- [FloatingObjects](GC.Spread.Sheets.FloatingObjects.md)
- [FormulaPanel](GC.Spread.Sheets.FormulaPanel.md)
- [FormulaTextBox](GC.Spread.Sheets.FormulaTextBox.md)
- [GanttSheet](GC.Spread.Sheets.GanttSheet.md)
- [Hyperlink](GC.Spread.Sheets.Hyperlink.md)
- [IO](GC.Spread.Sheets.IO.md)
- [InputMask](GC.Spread.Sheets.InputMask.md)
- [NameBox](GC.Spread.Sheets.NameBox.md)
- [OutlineColumn](GC.Spread.Sheets.OutlineColumn.md)
- [Outlines](GC.Spread.Sheets.Outlines.md)
- [PDF](GC.Spread.Sheets.PDF.md)
- [Print](GC.Spread.Sheets.Print.md)
- [Search](GC.Spread.Sheets.Search.md)
- [Shapes](GC.Spread.Sheets.Shapes.md)
- [Slicers](GC.Spread.Sheets.Slicers.md)
- [Sparklines](GC.Spread.Sheets.Sparklines.md)
- [StatusBar](GC.Spread.Sheets.StatusBar.md)
- [TableSheet](GC.Spread.Sheets.TableSheet.md)
- [Tables](GC.Spread.Sheets.Tables.md)
- [Touch](GC.Spread.Sheets.Touch.md)

### Enumerations

- [AllSheetsListVisibility](../enums/GC.Spread.Sheets.AllSheetsListVisibility.md)
- [AllowDragHeaderToMove](../enums/GC.Spread.Sheets.AllowDragHeaderToMove.md)
- [AutoFitType](../enums/GC.Spread.Sheets.AutoFitType.md)
- [ButtonImageType](../enums/GC.Spread.Sheets.ButtonImageType.md)
- [ButtonPosition](../enums/GC.Spread.Sheets.ButtonPosition.md)
- [ButtonVisibility](../enums/GC.Spread.Sheets.ButtonVisibility.md)
- [CalculationMode](../enums/GC.Spread.Sheets.CalculationMode.md)
- [CalculationType](../enums/GC.Spread.Sheets.CalculationType.md)
- [CalendarPage](../enums/GC.Spread.Sheets.CalendarPage.md)
- [CalendarStartDay](../enums/GC.Spread.Sheets.CalendarStartDay.md)
- [CaptionAlignment](../enums/GC.Spread.Sheets.CaptionAlignment.md)
- [CellStatesType](../enums/GC.Spread.Sheets.CellStatesType.md)
- [ClearPendingChangeType](../enums/GC.Spread.Sheets.ClearPendingChangeType.md)
- [ClipboardActionType](../enums/GC.Spread.Sheets.ClipboardActionType.md)
- [ClipboardPasteOptions](../enums/GC.Spread.Sheets.ClipboardPasteOptions.md)
- [CopyPasteHeaderOptions](../enums/GC.Spread.Sheets.CopyPasteHeaderOptions.md)
- [CopyToOptions](../enums/GC.Spread.Sheets.CopyToOptions.md)
- [CornerPosition](../enums/GC.Spread.Sheets.CornerPosition.md)
- [DropDownType](../enums/GC.Spread.Sheets.DropDownType.md)
- [DropdownListValue](../enums/GC.Spread.Sheets.DropdownListValue.md)
- [EditorStatus](../enums/GC.Spread.Sheets.EditorStatus.md)
- [FileType](../enums/GC.Spread.Sheets.FileType.md)
- [GroupSort](../enums/GC.Spread.Sheets.GroupSort.md)
- [HeaderAutoText](../enums/GC.Spread.Sheets.HeaderAutoText.md)
- [HeaderOptions](../enums/GC.Spread.Sheets.HeaderOptions.md)
- [HorizontalAlign](../enums/GC.Spread.Sheets.HorizontalAlign.md)
- [HorizontalPosition](../enums/GC.Spread.Sheets.HorizontalPosition.md)
- [HyperlinkTargetType](../enums/GC.Spread.Sheets.HyperlinkTargetType.md)
- [IconPosition](../enums/GC.Spread.Sheets.IconPosition.md)
- [ImageLayout](../enums/GC.Spread.Sheets.ImageLayout.md)
- [ImeMode](../enums/GC.Spread.Sheets.ImeMode.md)
- [InsertShiftCell](../enums/GC.Spread.Sheets.InsertShiftCell.md)
- [InvalidOperationType](../enums/GC.Spread.Sheets.InvalidOperationType.md)
- [LabelAlignment](../enums/GC.Spread.Sheets.LabelAlignment.md)
- [LabelVisibility](../enums/GC.Spread.Sheets.LabelVisibility.md)
- [LayoutDirection](../enums/GC.Spread.Sheets.LayoutDirection.md)
- [LayoutDisplayAs](../enums/GC.Spread.Sheets.LayoutDisplayAs.md)
- [LineStyle](../enums/GC.Spread.Sheets.LineStyle.md)
- [ListType](../enums/GC.Spread.Sheets.ListType.md)
- [NumbersFitMode](../enums/GC.Spread.Sheets.NumbersFitMode.md)
- [OpenMode](../enums/GC.Spread.Sheets.OpenMode.md)
- [PasteOperationOptions](../enums/GC.Spread.Sheets.PasteOperationOptions.md)
- [PatternType](../enums/GC.Spread.Sheets.PatternType.md)
- [RangeChangedAction](../enums/GC.Spread.Sheets.RangeChangedAction.md)
- [ReferenceStyle](../enums/GC.Spread.Sheets.ReferenceStyle.md)
- [ResizeMode](../enums/GC.Spread.Sheets.ResizeMode.md)
- [ResizeZeroIndicator](../enums/GC.Spread.Sheets.ResizeZeroIndicator.md)
- [RowColumnStates](../enums/GC.Spread.Sheets.RowColumnStates.md)
- [ScrollbarAppearance](../enums/GC.Spread.Sheets.ScrollbarAppearance.md)
- [SelectionPolicy](../enums/GC.Spread.Sheets.SelectionPolicy.md)
- [SelectionUnit](../enums/GC.Spread.Sheets.SelectionUnit.md)
- [SheetArea](../enums/GC.Spread.Sheets.SheetArea.md)
- [SheetTabState](../enums/GC.Spread.Sheets.SheetTabState.md)
- [SheetTabVisible](../enums/GC.Spread.Sheets.SheetTabVisible.md)
- [SheetType](../enums/GC.Spread.Sheets.SheetType.md)
- [ShowResizeTip](../enums/GC.Spread.Sheets.ShowResizeTip.md)
- [ShowScrollTip](../enums/GC.Spread.Sheets.ShowScrollTip.md)
- [SortState](../enums/GC.Spread.Sheets.SortState.md)
- [StorageType](../enums/GC.Spread.Sheets.StorageType.md)
- [TabStripPosition](../enums/GC.Spread.Sheets.TabStripPosition.md)
- [TextDecorationType](../enums/GC.Spread.Sheets.TextDecorationType.md)
- [TextDirectionType](../enums/GC.Spread.Sheets.TextDirectionType.md)
- [UsedRangeType](../enums/GC.Spread.Sheets.UsedRangeType.md)
- [ValueType](../enums/GC.Spread.Sheets.ValueType.md)
- [VertAlign](../enums/GC.Spread.Sheets.VertAlign.md)
- [VerticalAlign](../enums/GC.Spread.Sheets.VerticalAlign.md)
- [VerticalPosition](../enums/GC.Spread.Sheets.VerticalPosition.md)
- [VisualState](../enums/GC.Spread.Sheets.VisualState.md)

### Classes

- [CellRange](../classes/GC.Spread.Sheets.CellRange.md)
- [ColorScheme](../classes/GC.Spread.Sheets.ColorScheme.md)
- [CustomDocPropsManager](../classes/GC.Spread.Sheets.CustomDocPropsManager.md)
- [CustomThemeManagerBase](../classes/GC.Spread.Sheets.CustomThemeManagerBase.md)
- [Events](../classes/GC.Spread.Sheets.Events.md)
- [LineBorder](../classes/GC.Spread.Sheets.LineBorder.md)
- [NameInfo](../classes/GC.Spread.Sheets.NameInfo.md)
- [PivotTableManager](../classes/GC.Spread.Sheets.PivotTableManager.md)
- [Point](../classes/GC.Spread.Sheets.Point.md)
- [Range](../classes/GC.Spread.Sheets.Range.md)
- [Rect](../classes/GC.Spread.Sheets.Rect.md)
- [SheetTabStyleManager](../classes/GC.Spread.Sheets.SheetTabStyleManager.md)
- [Style](../classes/GC.Spread.Sheets.Style.md)
- [Theme](../classes/GC.Spread.Sheets.Theme.md)
- [ThemeColors](../classes/GC.Spread.Sheets.ThemeColors.md)
- [ThemeFont](../classes/GC.Spread.Sheets.ThemeFont.md)
- [ThemeFonts](../classes/GC.Spread.Sheets.ThemeFonts.md)
- [Themes](../classes/GC.Spread.Sheets.Themes.md)
- [Workbook](../classes/GC.Spread.Sheets.Workbook.md)
- [Worksheet](../classes/GC.Spread.Sheets.Worksheet.md)

### Interfaces

- [FloatingObjectLoadedEventArgs](../interfaces/GC.Spread.Sheets.FloatingObjectLoadedEventArgs.md)
- [FormattedData](../interfaces/GC.Spread.Sheets.FormattedData.md)
- [IActiveSheetChangedEventArgs](../interfaces/GC.Spread.Sheets.IActiveSheetChangedEventArgs.md)
- [IActiveSheetChangingEventArgs](../interfaces/GC.Spread.Sheets.IActiveSheetChangingEventArgs.md)
- [IAddColumnButtonOption](../interfaces/GC.Spread.Sheets.IAddColumnButtonOption.md)
- [IAddRowButtonOption](../interfaces/GC.Spread.Sheets.IAddRowButtonOption.md)
- [IAppDocProps](../interfaces/GC.Spread.Sheets.IAppDocProps.md)
- [IBaseSpreadOption](../interfaces/GC.Spread.Sheets.IBaseSpreadOption.md)
- [IBounds](../interfaces/GC.Spread.Sheets.IBounds.md)
- [IBuiltInFileIcons](../interfaces/GC.Spread.Sheets.IBuiltInFileIcons.md)
- [IButtonClickedEventArgs](../interfaces/GC.Spread.Sheets.IButtonClickedEventArgs.md)
- [ICalendarDateRange](../interfaces/GC.Spread.Sheets.ICalendarDateRange.md)
- [ICalendarOption](../interfaces/GC.Spread.Sheets.ICalendarOption.md)
- [ICellButton](../interfaces/GC.Spread.Sheets.ICellButton.md)
- [ICellChangedEventArgs](../interfaces/GC.Spread.Sheets.ICellChangedEventArgs.md)
- [ICellClickEventArgs](../interfaces/GC.Spread.Sheets.ICellClickEventArgs.md)
- [ICellColorSortInfo](../interfaces/GC.Spread.Sheets.ICellColorSortInfo.md)
- [ICellDoubleClickEventArgs](../interfaces/GC.Spread.Sheets.ICellDoubleClickEventArgs.md)
- [ICellPosition](../interfaces/GC.Spread.Sheets.ICellPosition.md)
- [ICellsInfo](../interfaces/GC.Spread.Sheets.ICellsInfo.md)
- [IClearChangeInfo](../interfaces/GC.Spread.Sheets.IClearChangeInfo.md)
- [IClipboardChangedEventArgs](../interfaces/GC.Spread.Sheets.IClipboardChangedEventArgs.md)
- [IClipboardChangingEventArgs](../interfaces/GC.Spread.Sheets.IClipboardChangingEventArgs.md)
- [IClipboardPastedEventArgs](../interfaces/GC.Spread.Sheets.IClipboardPastedEventArgs.md)
- [IClipboardPastingEventArgs](../interfaces/GC.Spread.Sheets.IClipboardPastingEventArgs.md)
- [IColorPickerGroup](../interfaces/GC.Spread.Sheets.IColorPickerGroup.md)
- [IColorPickerOption](../interfaces/GC.Spread.Sheets.IColorPickerOption.md)
- [IColumn](../interfaces/GC.Spread.Sheets.IColumn.md)
- [IColumnBindingInfo](../interfaces/GC.Spread.Sheets.IColumnBindingInfo.md)
- [IColumnChangedEventArgs](../interfaces/GC.Spread.Sheets.IColumnChangedEventArgs.md)
- [IColumnWidthChangedEventArgs](../interfaces/GC.Spread.Sheets.IColumnWidthChangedEventArgs.md)
- [IColumnWidthChangingEventArgs](../interfaces/GC.Spread.Sheets.IColumnWidthChangingEventArgs.md)
- [ICommandMetaData](../interfaces/GC.Spread.Sheets.ICommandMetaData.md)
- [ICommentChangedEventArgs](../interfaces/GC.Spread.Sheets.ICommentChangedEventArgs.md)
- [ICommentRemovedEventArgs](../interfaces/GC.Spread.Sheets.ICommentRemovedEventArgs.md)
- [ICommentRemovingEventArgs](../interfaces/GC.Spread.Sheets.ICommentRemovingEventArgs.md)
- [ICopyData](../interfaces/GC.Spread.Sheets.ICopyData.md)
- [ICoreDocProps](../interfaces/GC.Spread.Sheets.ICoreDocProps.md)
- [ICornerFold](../interfaces/GC.Spread.Sheets.ICornerFold.md)
- [ICustomDocPropsManager](../interfaces/GC.Spread.Sheets.ICustomDocPropsManager.md)
- [ICustomDocumentProperty](../interfaces/GC.Spread.Sheets.ICustomDocumentProperty.md)
- [ICustomSortInfo](../interfaces/GC.Spread.Sheets.ICustomSortInfo.md)
- [IDecoration](../interfaces/GC.Spread.Sheets.IDecoration.md)
- [IDeserializationOptions](../interfaces/GC.Spread.Sheets.IDeserializationOptions.md)
- [IDirtyCellInfo](../interfaces/GC.Spread.Sheets.IDirtyCellInfo.md)
- [IDocProps](../interfaces/GC.Spread.Sheets.IDocProps.md)
- [IDragDropBlockCompletedEventArgs](../interfaces/GC.Spread.Sheets.IDragDropBlockCompletedEventArgs.md)
- [IDragDropBlockEventArgs](../interfaces/GC.Spread.Sheets.IDragDropBlockEventArgs.md)
- [IDragFillBlockCompletedEventArgs](../interfaces/GC.Spread.Sheets.IDragFillBlockCompletedEventArgs.md)
- [IDragFillBlockEventArgs](../interfaces/GC.Spread.Sheets.IDragFillBlockEventArgs.md)
- [IDropdown](../interfaces/GC.Spread.Sheets.IDropdown.md)
- [IEditChangeEventArgs](../interfaces/GC.Spread.Sheets.IEditChangeEventArgs.md)
- [IEditEndedEventArgs](../interfaces/GC.Spread.Sheets.IEditEndedEventArgs.md)
- [IEditEndingEventArgs](../interfaces/GC.Spread.Sheets.IEditEndingEventArgs.md)
- [IEditStartingEventArgs](../interfaces/GC.Spread.Sheets.IEditStartingEventArgs.md)
- [IEditorStatusChangedEventArgs](../interfaces/GC.Spread.Sheets.IEditorStatusChangedEventArgs.md)
- [IEnterCellEventArgs](../interfaces/GC.Spread.Sheets.IEnterCellEventArgs.md)
- [IExternalReference](../interfaces/GC.Spread.Sheets.IExternalReference.md)
- [IExternalReferenceDetail](../interfaces/GC.Spread.Sheets.IExternalReferenceDetail.md)
- [IFilterButtonHitInfo](../interfaces/GC.Spread.Sheets.IFilterButtonHitInfo.md)
- [IFloatingObjectChangedEventArgs](../interfaces/GC.Spread.Sheets.IFloatingObjectChangedEventArgs.md)
- [IFloatingObjectRemovedEventArgs](../interfaces/GC.Spread.Sheets.IFloatingObjectRemovedEventArgs.md)
- [IFloatingObjectRemovingEventArgs](../interfaces/GC.Spread.Sheets.IFloatingObjectRemovingEventArgs.md)
- [IFloatingObjectSelectionChangedEventArgs](../interfaces/GC.Spread.Sheets.IFloatingObjectSelectionChangedEventArgs.md)
- [IFontColorSortInfo](../interfaces/GC.Spread.Sheets.IFontColorSortInfo.md)
- [IFormulaInfo](../interfaces/GC.Spread.Sheets.IFormulaInfo.md)
- [IFormulaRangeHitInfo](../interfaces/GC.Spread.Sheets.IFormulaRangeHitInfo.md)
- [IGradientFill](../interfaces/GC.Spread.Sheets.IGradientFill.md)
- [IGradientPathFill](../interfaces/GC.Spread.Sheets.IGradientPathFill.md)
- [IHitTestCellTypeHitInfo](../interfaces/GC.Spread.Sheets.IHitTestCellTypeHitInfo.md)
- [IHitTestCommentHitInfo](../interfaces/GC.Spread.Sheets.IHitTestCommentHitInfo.md)
- [IHitTestDragInfo](../interfaces/GC.Spread.Sheets.IHitTestDragInfo.md)
- [IHitTestFloatingObjectHitInfo](../interfaces/GC.Spread.Sheets.IHitTestFloatingObjectHitInfo.md)
- [IHitTestFooterCornerInfo](../interfaces/GC.Spread.Sheets.IHitTestFooterCornerInfo.md)
- [IHitTestInformation](../interfaces/GC.Spread.Sheets.IHitTestInformation.md)
- [IHitTestOutlineHitInfo](../interfaces/GC.Spread.Sheets.IHitTestOutlineHitInfo.md)
- [IHitTestResizeInfo](../interfaces/GC.Spread.Sheets.IHitTestResizeInfo.md)
- [IHitTestScrollBarInfo](../interfaces/GC.Spread.Sheets.IHitTestScrollBarInfo.md)
- [IHitTestShapeHitInfo](../interfaces/GC.Spread.Sheets.IHitTestShapeHitInfo.md)
- [IHyperlink](../interfaces/GC.Spread.Sheets.IHyperlink.md)
- [IIHitTestTabStripInfo](../interfaces/GC.Spread.Sheets.IIHitTestTabStripInfo.md)
- [IIcon](../interfaces/GC.Spread.Sheets.IIcon.md)
- [IImageSize](../interfaces/GC.Spread.Sheets.IImageSize.md)
- [IIncrementalLoadingOptions](../interfaces/GC.Spread.Sheets.IIncrementalLoadingOptions.md)
- [IInvalidOperationEventArgs](../interfaces/GC.Spread.Sheets.IInvalidOperationEventArgs.md)
- [ILabelOptions](../interfaces/GC.Spread.Sheets.ILabelOptions.md)
- [ILeaveCellEventArgs](../interfaces/GC.Spread.Sheets.ILeaveCellEventArgs.md)
- [ILeftColumnChangedEventArgs](../interfaces/GC.Spread.Sheets.ILeftColumnChangedEventArgs.md)
- [IListItem](../interfaces/GC.Spread.Sheets.IListItem.md)
- [IListLayout](../interfaces/GC.Spread.Sheets.IListLayout.md)
- [IListOption](../interfaces/GC.Spread.Sheets.IListOption.md)
- [IMaskType](../interfaces/GC.Spread.Sheets.IMaskType.md)
- [IMonthPickerOption](../interfaces/GC.Spread.Sheets.IMonthPickerOption.md)
- [IMultiColumnOption](../interfaces/GC.Spread.Sheets.IMultiColumnOption.md)
- [IOutlineColumnCheckStatusChanged](../interfaces/GC.Spread.Sheets.IOutlineColumnCheckStatusChanged.md)
- [IOutlineHitInfo](../interfaces/GC.Spread.Sheets.IOutlineHitInfo.md)
- [IParamRange](../interfaces/GC.Spread.Sheets.IParamRange.md)
- [IParameter](../interfaces/GC.Spread.Sheets.IParameter.md)
- [IPasteData](../interfaces/GC.Spread.Sheets.IPasteData.md)
- [IPatternFill](../interfaces/GC.Spread.Sheets.IPatternFill.md)
- [IPictureChangedEventArgs](../interfaces/GC.Spread.Sheets.IPictureChangedEventArgs.md)
- [IPictureSelectionChangedEventArgs](../interfaces/GC.Spread.Sheets.IPictureSelectionChangedEventArgs.md)
- [IPivotTableChangedEventArgs](../interfaces/GC.Spread.Sheets.IPivotTableChangedEventArgs.md)
- [IProtectionOptions](../interfaces/GC.Spread.Sheets.IProtectionOptions.md)
- [IRange](../interfaces/GC.Spread.Sheets.IRange.md)
- [IRangeChangedEventArgs](../interfaces/GC.Spread.Sheets.IRangeChangedEventArgs.md)
- [IRangeFilterClearedEventArgs](../interfaces/GC.Spread.Sheets.IRangeFilterClearedEventArgs.md)
- [IRangeFilterClearingEventArgs](../interfaces/GC.Spread.Sheets.IRangeFilterClearingEventArgs.md)
- [IRangeFilteredEventArgs](../interfaces/GC.Spread.Sheets.IRangeFilteredEventArgs.md)
- [IRangeFilteringEventArgs](../interfaces/GC.Spread.Sheets.IRangeFilteringEventArgs.md)
- [IRangeGroupStateChangedEventArgs](../interfaces/GC.Spread.Sheets.IRangeGroupStateChangedEventArgs.md)
- [IRangeGroupStateChangingEventArgs](../interfaces/GC.Spread.Sheets.IRangeGroupStateChangingEventArgs.md)
- [IRangeSortedEventArgs](../interfaces/GC.Spread.Sheets.IRangeSortedEventArgs.md)
- [IRangeSortingEventArgs](../interfaces/GC.Spread.Sheets.IRangeSortingEventArgs.md)
- [IRowChangedEventArgs](../interfaces/GC.Spread.Sheets.IRowChangedEventArgs.md)
- [IRowHeightChangedEventArgs](../interfaces/GC.Spread.Sheets.IRowHeightChangedEventArgs.md)
- [IRowHeightChangingEventArgs](../interfaces/GC.Spread.Sheets.IRowHeightChangingEventArgs.md)
- [ISelectionChangedEventArgs](../interfaces/GC.Spread.Sheets.ISelectionChangedEventArgs.md)
- [ISelectionChangingEventArgs](../interfaces/GC.Spread.Sheets.ISelectionChangingEventArgs.md)
- [ISerializationOption](../interfaces/GC.Spread.Sheets.ISerializationOption.md)
- [ISetBorderOptions](../interfaces/GC.Spread.Sheets.ISetBorderOptions.md)
- [IShapeChangedEventArgs](../interfaces/GC.Spread.Sheets.IShapeChangedEventArgs.md)
- [IShapeRemovedEventArgs](../interfaces/GC.Spread.Sheets.IShapeRemovedEventArgs.md)
- [IShapeRemovingEventArgs](../interfaces/GC.Spread.Sheets.IShapeRemovingEventArgs.md)
- [IShapeSelectionChangedEventArgs](../interfaces/GC.Spread.Sheets.IShapeSelectionChangedEventArgs.md)
- [ISheetChangedEventArgs](../interfaces/GC.Spread.Sheets.ISheetChangedEventArgs.md)
- [ISheetChangingEventArgs](../interfaces/GC.Spread.Sheets.ISheetChangingEventArgs.md)
- [ISheetDefaultOption](../interfaces/GC.Spread.Sheets.ISheetDefaultOption.md)
- [ISheetNameChangedEventArgs](../interfaces/GC.Spread.Sheets.ISheetNameChangedEventArgs.md)
- [ISheetNameChangingEventArgs](../interfaces/GC.Spread.Sheets.ISheetNameChangingEventArgs.md)
- [ISheetNameTabStyleMap](../interfaces/GC.Spread.Sheets.ISheetNameTabStyleMap.md)
- [ISheetTabClickEventArgs](../interfaces/GC.Spread.Sheets.ISheetTabClickEventArgs.md)
- [ISheetTabDoubleClickEventArgs](../interfaces/GC.Spread.Sheets.ISheetTabDoubleClickEventArgs.md)
- [ISheetTabStyle](../interfaces/GC.Spread.Sheets.ISheetTabStyle.md)
- [ISlicerChangedEventArgs](../interfaces/GC.Spread.Sheets.ISlicerChangedEventArgs.md)
- [ISliderOption](../interfaces/GC.Spread.Sheets.ISliderOption.md)
- [ISortOptions](../interfaces/GC.Spread.Sheets.ISortOptions.md)
- [ISortState](../interfaces/GC.Spread.Sheets.ISortState.md)
- [ISparklineChangedEventArgs](../interfaces/GC.Spread.Sheets.ISparklineChangedEventArgs.md)
- [ITableFilterClearedEventArgs](../interfaces/GC.Spread.Sheets.ITableFilterClearedEventArgs.md)
- [ITableFilterClearingEventArgs](../interfaces/GC.Spread.Sheets.ITableFilterClearingEventArgs.md)
- [ITableFilteredEventArgs](../interfaces/GC.Spread.Sheets.ITableFilteredEventArgs.md)
- [ITableFilteringEventArgs](../interfaces/GC.Spread.Sheets.ITableFilteringEventArgs.md)
- [ITimePickerOption](../interfaces/GC.Spread.Sheets.ITimePickerOption.md)
- [ITimePickerValue](../interfaces/GC.Spread.Sheets.ITimePickerValue.md)
- [ITopRowChangedEventArgs](../interfaces/GC.Spread.Sheets.ITopRowChangedEventArgs.md)
- [ITouchToolStripOpeningEventArgs](../interfaces/GC.Spread.Sheets.ITouchToolStripOpeningEventArgs.md)
- [IUserFormulaEnteredEventArgs](../interfaces/GC.Spread.Sheets.IUserFormulaEnteredEventArgs.md)
- [IUserZoomingEventArgs](../interfaces/GC.Spread.Sheets.IUserZoomingEventArgs.md)
- [IValidationErrorEventArgs](../interfaces/GC.Spread.Sheets.IValidationErrorEventArgs.md)
- [IValueChangedEventArgs](../interfaces/GC.Spread.Sheets.IValueChangedEventArgs.md)
- [IValueSortInfo](../interfaces/GC.Spread.Sheets.IValueSortInfo.md)
- [IWorkBookDefaultOptions](../interfaces/GC.Spread.Sheets.IWorkBookDefaultOptions.md)
- [IWorkFlowItem](../interfaces/GC.Spread.Sheets.IWorkFlowItem.md)
- [IWorkFlowOption](../interfaces/GC.Spread.Sheets.IWorkFlowOption.md)
- [IWorkSheetGridlineOption](../interfaces/GC.Spread.Sheets.IWorkSheetGridlineOption.md)
- [IWorkSheetSheetAreaOffsetOption](../interfaces/GC.Spread.Sheets.IWorkSheetSheetAreaOffsetOption.md)
- [IWorkbookHitTestInformation](../interfaces/GC.Spread.Sheets.IWorkbookHitTestInformation.md)
- [IWorkbookOptions](../interfaces/GC.Spread.Sheets.IWorkbookOptions.md)
- [IWorksheetOptions](../interfaces/GC.Spread.Sheets.IWorksheetOptions.md)
- [SheetTabInfo](../interfaces/GC.Spread.Sheets.SheetTabInfo.md)

### Type aliases

- [CellValue](GC.Spread.Sheets.md#cellvalue)
- [CustomDocumentPropertyValueType](GC.Spread.Sheets.md#customdocumentpropertyvaluetype)
- [ExportCsvOptions](GC.Spread.Sheets.md#exportcsvoptions)
- [ExportOptions](GC.Spread.Sheets.md#exportoptions)
- [ExportSSJsonOptions](GC.Spread.Sheets.md#exportssjsonoptions)
- [ExportXlsxOptions](GC.Spread.Sheets.md#exportxlsxoptions)
- [ExternalPartialValues](GC.Spread.Sheets.md#externalpartialvalues)
- [FileOptions](GC.Spread.Sheets.md#fileoptions)
- [ImportCsvOptions](GC.Spread.Sheets.md#importcsvoptions)
- [ImportOptions](GC.Spread.Sheets.md#importoptions)
- [ImportSSJsonOptions](GC.Spread.Sheets.md#importssjsonoptions)
- [ImportXlsxOptions](GC.Spread.Sheets.md#importxlsxoptions)
- [OpenOptions](GC.Spread.Sheets.md#openoptions)
- [PartialValues](GC.Spread.Sheets.md#partialvalues)
- [ProgressArgs](GC.Spread.Sheets.md#progressargs)
- [ProgressFunctionType](GC.Spread.Sheets.md#progressfunctiontype)
- [SaveOptions](GC.Spread.Sheets.md#saveoptions)
- [SheetTabStyles](GC.Spread.Sheets.md#sheettabstyles)

### Variables

- [LicenseKey](GC.Spread.Sheets.md#licensekey)

### Functions

- [findControl](GC.Spread.Sheets.md#findcontrol)
- [getTypeFromString](GC.Spread.Sheets.md#gettypefromstring)

## Type aliases

### <a id="cellvalue" name="cellvalue"></a> CellValue

Ƭ **CellValue**: `Object`

**`property`** {any} col - 一个键值集合，其中键是列号，值是任意类型的单元格值。

#### Index signature

▪ [col: `number`]: `any`

___

### <a id="customdocumentpropertyvaluetype" name="customdocumentpropertyvaluetype"></a> CustomDocumentPropertyValueType

Ƭ **CustomDocumentPropertyValueType**: `string` \| `number` \| `boolean` \| `Date`

**`description`** 自定义文档属性类型。

___

### <a id="exportcsvoptions" name="exportcsvoptions"></a> ExportCsvOptions

Ƭ **ExportCsvOptions**: `Object`

**`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型。

**`property`** {string} [encoding] - 已弃用：目前仅支持以 UTF-8 编码导出，设置 `encoding` 属性将不会生效。

**`property`** {string} [rowDelimiter] - 添加到行末尾的行分隔符，默认行分隔符为 '\r\n'。

**`property`** {string} [columnDelimiter] - 添加到列末尾的列分隔符，默认列分隔符为 ','。

**`property`** {object} [range] - 范围信息。

**`param`** 工作表索引，默认工作表索引为当前活动工作表索引。

**`param`** 起始行，默认行索引为 0。

**`param`** 起始列，默认列索引为 0。

**`param`** 行数，默认行数为当前活动工作表的行数。

**`param`** 列数，默认列数为当前活动工作表的列数。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `columnDelimiter?` | `string` |
| `encoding?` | `string` |
| `range?` | { `column`: `number` ; `columnCount`: `number` ; `row`: `number` ; `rowCount`: `number` ; `sheetIndex`: `number`  } |
| `range.column` | `number` |
| `range.columnCount` | `number` |
| `range.row` | `number` |
| `range.rowCount` | `number` |
| `range.sheetIndex` | `number` |
| `rowDelimiter?` | `string` |

___

### <a id="exportoptions" name="exportoptions"></a> ExportOptions

Ƭ **ExportOptions**: [`FileOptions`](GC.Spread.Sheets.md#fileoptions) & [`ExportCsvOptions`](GC.Spread.Sheets.md#exportcsvoptions) \| [`ExportSSJsonOptions`](GC.Spread.Sheets.md#exportssjsonoptions) \| [`ExportXlsxOptions`](GC.Spread.Sheets.md#exportxlsxoptions)

___

### <a id="exportssjsonoptions" name="exportssjsonoptions"></a> ExportSSJsonOptions

Ƭ **ExportSSJsonOptions**: `Object`

**`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型。

**`property`** {boolean} [includeBindingSource] - 是否包含绑定源，默认为 false。

**`property`** {boolean} [includeStyles] - 是否包含样式，默认为 true。

**`property`** {boolean} [includeFormulas] - 是否包含公式，默认为 true。

**`property`** {boolean} [saveAsView] - 是否将格式字符串应用到导出值，默认为 false。

**`property`** {boolean} [rowHeadersAsFrozenColumns] - 是否将行标题视为冻结列，默认为 false。

**`property`** {boolean} [columnHeadersAsFrozenRows] - 是否将列标题视为冻结行，默认为 false。

**`property`** {boolean} [includeAutoMergedCells] - 是否包含自动合并的单元格，默认为 false。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `columnHeadersAsFrozenRows?` | `boolean` |
| `includeAutoMergedCells?` | `boolean` |
| `includeBindingSource?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `rowHeadersAsFrozenColumns?` | `boolean` |
| `saveAsView?` | `boolean` |
| `saveR1C1Formula?` | `boolean` |

___

### <a id="exportxlsxoptions" name="exportxlsxoptions"></a> ExportXlsxOptions

Ƭ **ExportXlsxOptions**: `Object`

**`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型。

**`property`** {boolean} [includeBindingSource] - 是否包含绑定源，默认为 false。

**`property`** {boolean} [includeStyles] - 是否包含样式，默认为 true。

**`property`** {boolean} [includeFormulas] - 是否包含公式，默认为 true。

**`property`** {boolean} [saveAsView] - 保存时是否将格式字符串应用到导出值，默认为 false。

**`property`** {boolean} [rowHeadersAsFrozenColumns] - 保存时是否将行标题视为冻结列，默认为 false。

**`property`** {boolean} [columnHeadersAsFrozenRows] - 保存时是否将列标题视为冻结行，默认为 false。

**`property`** {boolean} [includeAutoMergedCells] - 保存时是否包含自动合并的单元格，默认为 false。

**`property`** {boolean} [includeCalcModelCache] - [已弃用] 是否包含计算的额外数据。包含这些数据时打开文件可能会更快，默认为 false。

**`property`** {boolean} [includeUnusedNames] - 保存时是否包含未使用的自定义名称，默认为 true。

**`property`** {boolean} [exportSharedFormula] - 保存时是否包含共享公式，默认为 true。

**`property`** {boolean} [includeEmptyRegionCells] - 是否包含已使用数据范围之外的任何空单元格（没有数据或只有样式的单元格），默认为 true。

**`property`** {string} [password] - 设置打开工作簿的密码。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `columnHeadersAsFrozenRows?` | `boolean` |
| `exportSharedFormula?` | `boolean` |
| `includeAutoMergedCells?` | `boolean` |
| `includeBindingSource?` | `boolean` |
| `includeCalcModelCache?` | `boolean` |
| `includeEmptyRegionCells?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `includeUnusedNames?` | `boolean` |
| `password?` | `string` |
| `rowHeadersAsFrozenColumns?` | `boolean` |
| `saveAsView?` | `boolean` |

___

### <a id="externalpartialvalues" name="externalpartialvalues"></a> ExternalPartialValues

Ƭ **ExternalPartialValues**: `Object`

**`property`** {GC.Spread.Sheets.PartialValues} filePath - 一个键值集合，其中键是文件路径字符串，值是类型为 GC.Spread.Sheets.PartialValues 的集合。

#### Index signature

▪ [filePath: `string`]: [`PartialValues`](GC.Spread.Sheets.md#partialvalues)

___

### <a id="fileoptions" name="fileoptions"></a> FileOptions

Ƭ **FileOptions**: `Object`

**`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型。

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `fileType` | [`FileType`](../enums/GC.Spread.Sheets.FileType.md) | The file type. |

___

### <a id="importcsvoptions" name="importcsvoptions"></a> ImportCsvOptions

Ƭ **ImportCsvOptions**: `Object`

**`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型。

**`property`** {string} [encoding] - 编码类型，默认编码类型为 'UTF-8'。

**`property`** {string} [rowDelimiter] - 行分隔符，默认行分隔符为 '\r\n'。

**`property`** {string} [columnDelimiter] - 列分隔符，默认列分隔符为 ','。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `columnDelimiter?` | `string` |
| `encoding?` | `string` |
| `rowDelimiter?` | `string` |

___

### <a id="importoptions" name="importoptions"></a> ImportOptions

Ƭ **ImportOptions**: [`FileOptions`](GC.Spread.Sheets.md#fileoptions) & [`ImportCsvOptions`](GC.Spread.Sheets.md#importcsvoptions) \| [`ImportSSJsonOptions`](GC.Spread.Sheets.md#importssjsonoptions) \| [`ImportXlsxOptions`](GC.Spread.Sheets.md#importxlsxoptions)

___

### <a id="importssjsonoptions" name="importssjsonoptions"></a> ImportSSJsonOptions

Ƭ **ImportSSJsonOptions**: `Object`

**`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型。

**`property`** {boolean} [includeStyles] - 是否在将 json 转换为工作簿时包含样式，默认为 true。

**`property`** {boolean} [includeFormulas] - 是否在将 json 转换为工作簿时包含公式，默认为 true。

**`property`** {boolean} [frozenColumnsAsRowHeaders] - 是否在将 json 转换为工作簿时将冻结列视为行标题，默认为 false。

**`property`** {boolean} [frozenRowsAsColumnHeaders] - 是否在将 json 转换为工作簿时将冻结行视为列标题，默认为 false。

**`property`** {boolean} [fullRecalc] - 是否在加载 json 数据后进行完全重新计算，默认为 true。

**`property`** {boolean | object} [incrementalLoad] - 是否在将 json 转换为工作簿时使用增量加载或增量加载的回调，默认为 false。

**`param`** 增量加载进度的回调。

**`param`** 增量加载完成的回调。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `frozenColumnsAsRowHeaders?` | `boolean` |
| `frozenRowsAsColumnHeaders?` | `boolean` |
| `fullRecalc?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `incrementalLoad?` | `any` |

___

### <a id="importxlsxoptions" name="importxlsxoptions"></a> ImportXlsxOptions

Ƭ **ImportXlsxOptions**: `Object`

**`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型。

**`property`** {boolean} [includeStyles] - 加载时是否包含样式，默认为 true。

**`property`** {boolean} [includeFormulas] - 加载时是否包含公式，默认为 true。

**`property`** {boolean} [frozenColumnsAsRowHeaders] - 加载时是否将冻结列视为行标题，默认为 false。

**`property`** {boolean} [frozenRowsAsColumnHeaders] - 加载时是否将冻结行视为列标题，默认为 false。

**`property`** {boolean} [fullRecalc] - 加载 json 数据后是否进行计算，默认为 false。

**`property`** {boolean} [dynamicReferences] - 是否计算具有动态引用的函数，默认为 true。

**`property`** {boolean} [calcOnDemand] - 是否仅在需要时计算公式，默认为 false。

**`property`** {boolean} [incrementalCalculation] - 是否在不阻塞 UI 的情况下增量计算公式，默认为 false。

**`property`** {boolean} [includeUnusedStyles] - 将 excel xml 转换为 json 时是否包含未使用的命名样式，默认为 true。

**`property`** {boolean} [convertSheetTableToDataTable] - 是否将工作表表格转换为数据管理器表格，默认为 false。

**`property`** {string} [password] - 打开工作簿的密码。

**`property`** {GC.Spread.Sheets.OpenMode} [openMode] - 打开模式，包括 normal、lazy 和 incremental，默认为 normal。

**`property`** {GC.Spread.Sheets.ProgressFunctionType} [progress] - 每种打开模式的进度回调函数。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `calcOnDemand?` | `boolean` |
| `convertSheetTableToDataTable?` | `boolean` |
| `dynamicReferences?` | `boolean` |
| `frozenColumnsAsRowHeaders?` | `boolean` |
| `frozenRowsAsColumnHeaders?` | `boolean` |
| `fullRecalc?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `includeUnusedStyles?` | `boolean` |
| `incrementalCalculation?` | `boolean` |
| `openMode?` | [`OpenMode`](../enums/GC.Spread.Sheets.OpenMode.md) |
| `password?` | `string` |
| `progress?` | [`ProgressFunctionType`](GC.Spread.Sheets.md#progressfunctiontype) |

___

### <a id="openoptions" name="openoptions"></a> OpenOptions

Ƭ **OpenOptions**: `Object`

**`property`** {boolean} [includeStyles] - 加载时是否包含样式，默认为 true。

**`property`** {boolean} [includeFormulas] - 加载时是否包含公式，默认为 true。

**`property`** {boolean} [fullRecalc] - 加载 json 数据后是否进行计算，默认为 false。

**`property`** {boolean} [dynamicReferences] - 是否计算具有动态引用的函数，默认为 true。

**`property`** {boolean} [calcOnDemand] - 是否仅在需要时计算公式，默认为 false。

**`property`** {boolean} [incrementalCalculation] - 是否在不阻塞 UI 的情况下增量计算公式，默认为 false。

**`property`** {boolean} [includeUnusedStyles] - 将 excel xml 转换为 json 时是否包含未使用的命名样式，默认为 true。

**`property`** {GC.Spread.Sheets.OpenMode} [openMode] - 打开模式，包括 normal、lazy 和 incremental，默认为 normal。

**`property`** {GC.Spread.Sheets.ProgressFunctionType} [progress] - 每种打开模式的进度回调函数。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `calcOnDemand?` | `boolean` |
| `dynamicReferences?` | `boolean` |
| `fullRecalc?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `includeUnusedStyles?` | `boolean` |
| `incrementalCalculation?` | `boolean` |
| `openMode?` | [`OpenMode`](../enums/GC.Spread.Sheets.OpenMode.md) |
| `progress?` | [`ProgressFunctionType`](GC.Spread.Sheets.md#progressfunctiontype) |

___

### <a id="partialvalues" name="partialvalues"></a> PartialValues

Ƭ **PartialValues**: `Object`

**`property`** {GC.Spread.Sheets.CellValue} row - 一个键值集合，其中键是行号，值是 GC.Spread.Sheets.CellValue 类型。

#### Index signature

▪ [row: `number`]: [`CellValue`](GC.Spread.Sheets.md#cellvalue)

___

### <a id="progressargs" name="progressargs"></a> ProgressArgs

Ƭ **ProgressArgs**: `Object`

**`property`** {string} sheetName - 当前正在加载的工作表名称。

**`property`** {string} step - 当前加载步骤。

**`property`** {number} progress - 当前加载进度，范围从 0 到 1。

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `progress` | `number` | 当前加载进度，范围从 0 到 1。 |
| `sheetName?` | `string` | 当前正在加载的工作表名称。 |
| `step` | `string` | 当前加载步骤。 |

___

### <a id="progressfunctiontype" name="progressfunctiontype"></a> ProgressFunctionType

Ƭ **ProgressFunctionType**: (`progressArgs`: [`ProgressArgs`](GC.Spread.Sheets.md#progressargs)) => `void`

#### Type declaration

▸ (`progressArgs`): `void`

**`description`** 增量加载进度的回调函数。

##### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `progressArgs` | [`ProgressArgs`](GC.Spread.Sheets.md#progressargs) | 进度参数。 |

##### Returns

`void`

___

### <a id="saveoptions" name="saveoptions"></a> SaveOptions

Ƭ **SaveOptions**: `Object`

**`property`** {boolean} [includeBindingSource] - 保存时是否包含绑定源，默认为 false。

**`property`** {boolean} [includeStyles] - 保存时是否包含样式，默认为 true。

**`property`** {boolean} [includeFormulas] - 保存时是否包含公式，默认为 true。

**`property`** {boolean} [saveAsView] - 保存时是否将格式字符串应用于导出值，默认为 false。

**`property`** {boolean} [includeAutoMergedCells] - 保存时是否包含自动合并的单元格，默认为 false。

**`property`** {boolean} [includeCalcModelCache] - 是否包含计算的额外数据。包含这些数据可以加快文件打开速度，默认为 false。

**`property`** {boolean} [includeUnusedNames] - 保存时是否包含未使用的自定义名称，默认为 true。

**`property`** {boolean} [includeEmptyRegionCells] - 是否包含已使用数据范围之外的任何空单元格（没有数据或只有样式的单元格），默认为 true。

**`property`** {boolean} [saveR1C1Formula] - 是否在文件中保存 r1c1 公式，仅在 sjs 文件类型中有效，默认为 false。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `includeAutoMergedCells?` | `boolean` |
| `includeBindingSource?` | `boolean` |
| `includeCalcModelCache?` | `boolean` |
| `includeEmptyRegionCells?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `includeUnusedNames?` | `boolean` |
| `saveAsView?` | `boolean` |
| `saveR1C1Formula?` | `boolean` |

___

### <a id="sheettabstyles" name="sheettabstyles"></a> SheetTabStyles

Ƭ **SheetTabStyles**: { [sheetTabState in SheetTabState]?: ISheetTabStyle }

**`property`** {GC.Spread.Sheets.SheetTabState} sheetTabState

## Variables

### <a id="licensekey" name="licensekey"></a> LicenseKey

• **LicenseKey**: `string`

表示评估版本和生产版本的许可证密钥。

## Functions

### <a id="findcontrol" name="findcontrol"></a> findControl

▸ **findControl**(`host`): [`Workbook`](../classes/GC.Spread.Sheets.Workbook.md)

通过主机元素获取 Workbook 实例。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `host` | `string` \| `HTMLElement` | 主机元素或主机元素 id。 |

#### Returns

[`Workbook`](../classes/GC.Spread.Sheets.Workbook.md)

Workbook 实例。

___

### <a id="gettypefromstring" name="gettypefromstring"></a> getTypeFromString

▸ **getTypeFromString**(`typeString`): `any`

从类型字符串获取类型。此方法用于支持自定义对象的序列化。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `typeString` | `string` | 类型字符串。 |

#### Returns

`any`

类型。
